--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,26 +1,26 @@
 {
-  "name": "Luminate Online Page Editor", 
-  "version": "1.12", 
-  "manifest_version": 2, 
-  
-  "description": "Edit Luminate Online pages with just one click.", 
-  
-  "background": {
-    "scripts": ["background.js"]
-  }, 
-  
-  "icons": {
-    "16": "logo16.png", 
-    "48": "logo48.png", 
-    "128": "logo128.png"
-  }, 
-  
-  "page_action": {
-    "default_icon": "logo128.png", 
-    "default_title": "Edit this page"
-  }, 
-  
-  "permissions" : [
+  "manifest_version": 3,
+  "name": "Luminate Online Page Editor",
+  "version": "2.0",
+  "description": "Quickly navigate to the edit page for Luminate Online content with one click.",
+  "permissions": [
+    "activeTab",
     "tabs"
-  ]
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_icon": {
+      "16": "logo16.png",
+      "48": "logo48.png",
+      "128": "logo128.png"
+    },
+    "default_title": "Edit this page"
+  },
+  "icons": {
+    "16": "logo16.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
+  }
 }
